--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,19 @@
-Babel==2.8.0
+asgiref==3.2.3
+astroid==2.3.3
 certifi==2019.11.28
-chardet==3.0.4
+colorama==0.4.3
 dj-database-url==0.5.0
-Django==2.2.10
-django-extra-views==0.11.0
-django-haystack==2.8.1
-django-oscar==2.0.4
-django-phonenumber-field==2.0.1
-django-tables2==1.21.2
-django-treebeard==4.3.1
-django-widget-tweaks==1.4.5
-factory-boy==2.12.0
-Faker==4.0.1
+Django==3.0.3
+django-model-choices==1.0.0
 gunicorn==20.0.4
-heroku==0.1.4
-idna==2.9
-phonenumbers==8.11.4
-Pillow==7.0.0
-purl==1.5
-python-dateutil==1.5
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pylint==2.4.4
 pytz==2019.3
-requests==2.23.0
 six==1.14.0
 sqlparse==0.3.0
-text-unidecode==1.3
-urllib3==1.25.8
-users==1.0.dev0
 whitenoise==5.0.1
 wincertstore==0.2
+wrapt==1.11.2
+psycopg2==2.7.2
