--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2019.11.28
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.0.3
+django-environ==0.4.5
 django-heroku==0.3.1
 django-model-choices==1.0.0
 gunicorn==20.0.4
