--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.0.3
 django-environ==0.4.5
 django-heroku==0.3.1
 django-model-choices==1.0.0
+django-qr-code==1.1.0
 gunicorn==20.0.4
 isort==4.3.21
 lazy-object-proxy==1.4.3
@@ -14,6 +15,7 @@ mccabe==0.6.1
 psycopg2==2.8.4
 pylint==2.4.4
 pytz==2019.3
+qrcode==6.1
 six==1.14.0
 sqlparse==0.3.0
 whitenoise==5.0.1
