--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.2.3
 astroid==2.3.3
+beautifulsoup4==4.8.2
+bigcommerce==0.20.1
 certifi==2019.11.28
+chardet==3.0.4
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.0.3
@@ -8,17 +11,33 @@ django-environ==0.4.5
 django-heroku==0.3.1
 django-model-choices==1.0.0
 django-qr-code==1.1.0
+djangorestframework==3.11.0
+get==2019.4.13
 gunicorn==20.0.4
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+numpy==1.18.2
+pandas==1.0.3
 Pillow==7.0.0
+post==2019.4.13
 psycopg2==2.8.4
+public==2019.4.13
+PyJWT==1.7.1
 pylint==2.4.4
+python-dateutil==2.8.1
+python-decouple==3.3
 pytz==2019.3
 qrcode==6.1
+query-string==2019.4.13
+request==2019.4.13
+requests==2.23.0
 six==1.14.0
+soupsieve==2.0
 sqlparse==0.3.0
+urllib3==1.25.8
+Werkzeug==1.0.0
 whitenoise==5.0.1
 wincertstore==0.2
 wrapt==1.11.2
