--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.0.3
 django-environ==0.4.5
+django-extensions==2.2.9
 django-heroku==0.3.1
 django-model-choices==1.0.0
 django-qr-code==1.1.0
